# oregano

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: pipeline.yml
cmake/: CompilerWarnings.cmake  Conan.cmake
examples/: CMakeLists.txt  conanfile.txt
examples/pubsub/: CMakeLists.txt
examples/pubsub/publisher/: main.cpp
examples/pubsub/subscriber/: main.cpp
examples/transaction/: CMakeLists.txt
examples/transaction/consumer/: main.cpp
examples/transaction/producer/: main.cpp
src/: CMakeLists.txt  conanfile.txt
src/implementation/: BrokerConfiguration.cpp  BrokerConfiguration.h  EventInterface.cpp  EventInterface.h  IMessage.h  IMessageBroker.h  IMessageBrokerConnector.h  IMessageHandlerManager.h  Message.cpp  Message.h  MessageBroker.cpp  MessageBroker.h  MessageBrokerFactory.cpp  MessageBrokerWrapper.cpp  MessageBrokerWrapper.h  MessageHandlerManager.cpp  MessageHandlerManager.h  Publisher.cpp  Publisher.h  RedisBrokerConnector.cpp  RedisBrokerConnector.h  RedisMessageBroker.cpp  RedisMessageBroker.h  RequestHandler.cpp  RequestHandler.h  RequestSender.cpp  RequestSender.h  ResponsePromise.cpp  ResponsePromise.h  Subscriber.cpp  Subscriber.h  TransactionInterface.cpp  TransactionInterface.h
src/interface/oregano/: BrokerConfiguration.h  IEventInterface.h  IMessageBrokerWrapper.h  IMessageHandler.h  IPublisher.h  IRequestHandler.h  IRequestSender.h  IResponsePromise.h  ISubscriber.h  ITransactionInterface.h
test/: CMakeLists.txt  conanfile.txt
test/integration/: CMakeLists.txt  PubSubTest.cpp  TransactionTest.cpp  conanfile.txt
test/unit/: BrokerConfigurationTest.cpp  CMakeLists.txt  EventInterfaceTest.cpp  MessageBrokerWrapperTest.cpp  MessageHandlerManagerTest.cpp  PublisherTest.cpp  RequestHandlerTest.cpp  RequestSenderTest.cpp  ResponsePromiseTest.cpp  SubscriberTest.cpp  TransactionInterfaceTest.cpp  utility.h
test/unit/mocks/: MockIEventInterface.h  MockIMessageBroker.h  MockIMessageBrokerWrapper.h  MockIMessageHandler.h  MockIMessageHandlerManager.h  MockIPublisher.h  MockISubscriber.h
